# mcp-mux

./: Cargo.toml  app.toml  branding.toml  pnpm-lock.yaml
apps/desktop/src/: App.tsx  index.css
apps/desktop/src-tauri/: tauri.conf.json
apps/desktop/src-tauri/src/: lib.rs
apps/desktop/src-tauri/src/commands/: feature_set.rs  gateway.rs  server_feature.rs
apps/desktop/src-tauri/src/state/: mod.rs
apps/desktop/src/components/: OAuthConsentModal.tsx  ServerIcon.tsx  ServerInstallModal.tsx  ServerLogViewer.tsx
apps/desktop/src/features/clients/: ClientsPage.tsx
apps/desktop/src/features/featuresets/: FeatureSetPanel.tsx  FeatureSetsPage.tsx
apps/desktop/src/features/registry/: RegistryPage.tsx  ServerCard.tsx  ServerDetailModal.tsx
apps/desktop/src/features/servers/: ServerCard.tsx  ServersPage.tsx
apps/desktop/src/features/settings/: SettingsPage.tsx
apps/desktop/src/features/spaces/: SpacesPage.tsx
apps/desktop/src/lib/api/: featureSets.ts  serverFeatures.ts
apps/desktop/src/types/: registry.ts
crates/mcpmux-core/: build.rs
crates/mcpmux-core/src/: branding.rs  lib.rs
crates/mcpmux-core/src/application/: mod.rs  server.rs
crates/mcpmux-core/src/domain/: config.rs  event.rs  server.rs  server_feature.rs
crates/mcpmux-core/src/registry/: schema.rs
crates/mcpmux-core/src/repository/: mod.rs
crates/mcpmux-gateway/src/mcp/: handler.rs
crates/mcpmux-gateway/src/oauth/: dcr.rs  mod.rs
crates/mcpmux-gateway/src/pool/: connection.rs  credential_store.rs  instance.rs  oauth.rs  routing.rs  service.rs
crates/mcpmux-gateway/src/pool/features/: discovery.rs  facade.rs  resolution.rs
crates/mcpmux-gateway/src/server/: handlers.rs
crates/mcpmux-mcp/src/: transports.rs
crates/mcpmux-storage/src/: database.rs
crates/mcpmux-storage/src/migrations/: 002_feature_disable.sql
crates/mcpmux-storage/src/repositories/: feature_set_repository.rs  server_feature_repository.rs
schemas/: user-space.schema.json
tests/rust/src/: mocks.rs
tests/rust/tests/database/: feature_set.rs
tests/rust/tests/oauth/: dcr.rs
